--- a/app/src/main/res/drawable/background_rounded_lightgrey_lined.xml
+++ b/app/src/main/res/drawable/background_rounded_lightgrey_lined.xml
@@ -3,9 +3,13 @@
     <solid android:color="#ddeeeeee"/>
     <corners android:radius="20dip"/>
     <padding
-        android:bottom="0dip"
-        android:left="0dip"
-        android:right="0dip"
-        android:top="0dip"/>
+        android:bottom="-20dip"
+        android:left="8dip"
+        android:right="8dip"
+        android:top="-20dip"/>
+    <stroke
+        android:width="1dip"
+        android:color="@color/colorAccent"
+        />
 
 </shape>
