--- a/app/src/main/res/drawable/background_underlined.xml
+++ b/app/src/main/res/drawable/background_underlined.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="#e0e0e0"/>
-    <corners android:radius="20dip"/>
+<!--00FFFFFF-->
     <padding
         android:bottom="0dip"
         android:left="0dip"
         android:right="0dip"
         android:top="0dip"/>
+    <gradient
+        android:angle="90"
+        android:startColor="#000000"
+        android:centerColor="@android:color/transparent"
+        android:centerX="0.01" />
 
 </shape>
