--- a/app/src/main/res/drawable/rounded_button.xml
+++ b/app/src/main/res/drawable/rounded_button.xml
@@ -1,11 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#e0e0e0"/>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    >
     <corners android:radius="20dip"/>
     <padding
-        android:bottom="0dip"
-        android:left="0dip"
-        android:right="0dip"
-        android:top="0dip"/>
+        android:bottom="-20dip"
+        android:left="8dip"
+        android:right="8dip"
+        android:top="-20dip"/>
+
+    <solid
+        android:color="@color/colorAccent"
+        />
+
+
+    <stroke
+        android:width="5dip"
+        android:color="@color/colorAccent"/>
+
+
+
     
 </shape>
