--- a/app/src/main/res/layout/activity_battery_view.xml
+++ b/app/src/main/res/layout/activity_battery_view.xml
@@ -7,51 +7,163 @@
     android:layout_height="match_parent"
     tools:context=".activities.BatteryViewActivity">
 
+    <TextView
+        android:id="@+id/Title_Devicestatus"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:text="Respeck device"
+        android:textColor="@color/colorAccent"
+        android:textSize="@dimen/fragment_title"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </TextView>
+
+    <TextView
+        android:id="@+id/subtTitle_devicestatus"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/Title_Devicestatus"
+        android:text=" ">
+
+
+    </TextView>
+
+    <LinearLayout
+        android:id="@+id/respeck_container"
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/background_rounded_lightgrey"
+        android:gravity="start"
+        android:orientation="horizontal"
+        android:padding="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/subtTitle_devicestatus">
+
+        <TextView
+            android:layout_weight="3.5"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="Status"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <LinearLayout
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="30dp"
+            android:background="@drawable/background_leftlined"
+            android:orientation="vertical"
+            android:paddingLeft="15dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/status_icon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/ic_baseline_bluetooth_24">
+
+                </ImageView>
+
+                <TextView
+                    android:id="@+id/respeck_connection_status"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="10dp"
+                    android:text="Connection:"
+                    android:textSize="15sp"
+                    />
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/bat_icon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/ic_battery_full">
+
+                </ImageView>
+
+                <TextView
+                    android:id="@+id/respeck_battery_view"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="10dp"
+                    android:text="Battery level:"
+                    android:textSize="15sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/charge_icon"
+                    android:layout_width="25dp"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/ic_lighting">
+
+                </ImageView>
+
+                <TextView
+                    android:id="@+id/respeck_charging_view"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="10dp"
+                    android:text="Charging: "
+                    android:textSize="15sp" />
+
+            </LinearLayout>
+
+
+        </LinearLayout>
+    </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/airspeck_container"
-        android:gravity="start"
-        android:padding="20dp"
-        android:id="@+id/respeck_container">
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@+id/respeck_container">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Respeck"
-            android:padding="10dp"
-            android:textStyle="bold"
-            android:textSize="20sp"/>
+            android:paddingTop="10dp"
+            android:id="@+id/phone_id"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="place test phone ID"
+            android:textSize="20dp">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginLeft="30dp">
+        </TextView>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/respeck_connection_status"
-                android:text="Status:"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/respeck_battery_view"
-                android:text="Battery level:"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/respeck_charging_view"
-                android:text="Charging: "/>
-
-        </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
@@ -64,7 +176,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:gravity="start"
         android:padding="20dp"
-        android:id="@+id/airspeck_container">
+        android:id="@+id/airspeck_container"
+        android:visibility="gone">
 
         <TextView
             android:layout_width="wrap_content"
