--- a/app/src/main/res/layout/fragment_activity_summary.xml
+++ b/app/src/main/res/layout/fragment_activity_summary.xml
@@ -5,26 +5,59 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TextView
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/sup_actsum_appbarlayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="7dp"
-            android:layout_marginTop="15dp"
-            android:gravity="center"
-            android:text="@string/activity_summary_title"/>
+            android:background="@color/md_yellow_600"
 
-        <ListView
-            android:id="@+id/readings_list"
+            >
+
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/sup_actsum_tablayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                >
+
+            </com.google.android.material.tabs.TabLayout>
+
+        </com.google.android.material.appbar.AppBarLayout>
+
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/sup_actsum_viewpager"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"/>
+            android:layout_height="match_parent">
+
+        </androidx.viewpager.widget.ViewPager>
 
     </LinearLayout>
+
+
+<!--    <LinearLayout-->
+<!--        xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:orientation="vertical">-->
+
+<!--        <TextView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginBottom="7dp"-->
+<!--            android:layout_marginTop="15dp"-->
+<!--            android:gravity="center"-->
+<!--            android:text="@string/activity_summary_title"/>-->
+
+<!--        <ListView-->
+<!--            android:id="@+id/readings_list"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="0dp"-->
+<!--            android:layout_weight="1"/>-->
+
+<!--    </LinearLayout>-->
 
     <include layout="@layout/content_connecting"/>
 </RelativeLayout>
