--- a/app/src/main/res/layout/fragment_actsum_pastweek_.xml
+++ b/app/src/main/res/layout/fragment_actsum_pastweek_.xml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.actsum_pastweek_Fragment">
+    tools:context=".fragments.actsum_pastweek_Fragment"
+    android:background="@color/md_red_300"
+    android:orientation="vertical">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:text="past week fragment" />
 
-</FrameLayout>
+    <ListView
+        android:id="@+id/readings_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
+
+</LinearLayout>
