--- a/app/src/main/res/layout/fragment_diary_tab.xml
+++ b/app/src/main/res/layout/fragment_diary_tab.xml
@@ -3,12 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.DiaryTabFragment">
+    tools:context=".fragments.DiaryTabFragment"
+    android:background="@color/md_orange_400">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:text="and dis da diary" />
 
 </FrameLayout>
