--- a/app/src/main/res/layout/fragment_rehab_tab.xml
+++ b/app/src/main/res/layout/fragment_rehab_tab.xml
@@ -3,12 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.RehabTabFragment">
+    tools:context=".fragments.RehabTabFragment"
+    android:background="@color/md_yellow_600">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:text="finally de rehabb" />
 
 </FrameLayout>
