--- a/app/src/main/res/layout/fragment_sup_actsum_pastweek.xml
+++ b/app/src/main/res/layout/fragment_sup_actsum_pastweek.xml
@@ -9,6 +9,6 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:text="This the past week fragment"/>
 
 </FrameLayout>
