--- a/app/src/main/res/layout/fragment_sup_actsum_today.xml
+++ b/app/src/main/res/layout/fragment_sup_actsum_today.xml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".fragments.sup_actsum_todayFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/print_test"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Want to print values here" />
+
+    <ListView
+        android:id="@+id/readings_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        />
 
-</FrameLayout>
+</LinearLayout>
