--- a/app/src/main/res/menu/actsum_dayweek.xml
+++ b/app/src/main/res/menu/actsum_dayweek.xml
@@ -3,28 +3,11 @@
 
     <item
         android:id="@+id/act_sum"
-        android:icon="@drawable/ic_baseline_calendar_today_24"
-        android:title="@string/botnav_actsum" />
+        android:title="Today" />
 
     <item
         android:id="@+id/live_act"
-        android:icon="@drawable/ic_baseline_directions_run_24"
-        android:title="@string/botnav_liveact" />
-
-    <item
-        android:id="@+id/home_subject"
-        android:icon="@drawable/ic_baseline_home_24"
-        android:title="@string/botnav_home" />
-
-    <item
-        android:id="@+id/diary"
-        android:icon="@drawable/ic_baseline_menu_book_24"
-        android:title="@string/botnav_diary" />
-
-    <item
-        android:id="@+id/rehab"
-        android:icon="@drawable/ic_massage"
-        android:title="@string/botnav_rehab" />
-
+        android:title="Past week"
+        />
 
 </menu>
