--- a/app/src/main/res/menu/menu_supervised.xml
+++ b/app/src/main/res/menu/menu_supervised.xml
@@ -3,37 +3,92 @@
       xmlns:tools="https://schemas.android.com/tools"
       tools:context="com.specknet.airrespeck.activities.MainActivity">
 
-    <group>
-        <item
-            android:id="@+id/action_subject_mode"
-            android:orderInCategory="10"
-            android:title="@string/action_subject_mode"
-            app:showAsAction="never"/>
+        <item android:id="@+id/action_more"
+            android:icon="@drawable/ic_baseline_more_vert_24"
+            android:title=" "
+            app:showAsAction="always">
 
-        <item
-            android:id="@+id/action_view_config"
-            android:orderInCategory="20"
-            android:title="@string/action_view_config"
-            app:showAsAction="never"/>
+            <menu>
 
-        <item
-            android:id="@+id/action_view_battery"
-            android:orderInCategory="30"
-            android:title="@string/action_view_battery"
-            app:showAsAction="never"/>
+            <item
+                android:id="@+id/action_subject_mode"
+                android:orderInCategory="10"
+                android:title="@string/action_subject_mode"
 
-        <item
-            android:id="@+id/action_check_for_updates"
-            android:orderInCategory="40"
-            android:title="@string/action_check_for_updates"
-            app:showAsAction="never"/>
+                app:showAsAction="never"/>
+<!--                android:icon="@drawable/ic_patient"-->
 
-        <item
-            android:id="@+id/action_close_app"
-            android:orderInCategory="100"
-            android:title="@string/action_close_app"
-            app:showAsAction="never"/>
 
-    </group>
+            <item
+                android:id="@+id/action_view_config"
+                android:orderInCategory="20"
+                android:title="Respeck device"
+
+                app:showAsAction="never">
+<!--                android:icon="@drawable/vec_respeck_icon"-->
+
+
+            </item>
+
+            <item
+                android:id="@+id/action_check_for_updates"
+                android:orderInCategory="40"
+                android:title="@string/action_check_for_updates"
+
+                app:showAsAction="never"/>
+<!--                android:icon="@drawable/ic_update"-->
+
+
+            <item
+                android:id="@+id/action_close_app"
+                android:orderInCategory="100"
+                android:title="@string/action_close_app"
+                app:showAsAction="never"/>
+<!--                android:icon="@drawable/ic_close"-->
+
+
+
+
+            </menu>
+
+        </item>
+
+
+<!--    <group>-->
+
+<!--        <item-->
+<!--            android:id="@+id/action_subject_mode"-->
+<!--            android:orderInCategory="10"-->
+<!--            android:title="@string/action_subject_mode"-->
+<!--            android:icon="@drawable/ic_patient"-->
+<!--            app:showAsAction="never"/>-->
+
+
+<!--        <item-->
+<!--            android:id="@+id/action_view_config"-->
+<!--            android:orderInCategory="20"-->
+<!--            android:title="Respeck device"-->
+<!--            android:icon="@drawable/ic_baseline_bluetooth_24"-->
+<!--            app:showAsAction="never">-->
+
+<!--        </item>-->
+
+
+
+<!--        <item-->
+<!--            android:id="@+id/action_check_for_updates"-->
+<!--            android:orderInCategory="40"-->
+<!--            android:title="@string/action_check_for_updates"-->
+<!--            android:icon="@drawable/ic_update"-->
+<!--            app:showAsAction="never"/>-->
+
+<!--        <item-->
+<!--            android:id="@+id/action_close_app"-->
+<!--            android:orderInCategory="100"-->
+<!--            android:title="@string/action_close_app"-->
+<!--            android:icon="@drawable/ic_close"-->
+<!--            app:showAsAction="never"/>-->
+
+<!--    </group>-->
 
 </menu>
