--- a/app/src/main/res/xml/pref_settings.xml
+++ b/app/src/main/res/xml/pref_settings.xml
@@ -18,6 +18,7 @@
         android:title="@string/pref_category_ui_menu">
 
         <ListPreference
+            android:layout_width="wrap_content"
             android:defaultValue="1"
             android:entries="@array/pref_menu_mode_list"
             android:entryValues="@array/pref_menu_mode_list_values"
